# conways-wallpaper

./: CMakeLists.txt  README.md
scripts/: wayland.sh  x11.sh
src/: graphics.h  grid.h  main.c
